fix(venues):fix-alignment-issues

--- a/src/pages/app/Guests/components/ViewGuest/ViewGuest.module.css
+++ b/src/pages/app/Guests/components/ViewGuest/ViewGuest.module.css
@@ -296,6 +296,7 @@
   display: flex;
   flex-direction: row;
   align-items: flex-end;
+  justify-content: flex-start;
   width: 100%;
   padding: 0.5rem;
   border-bottom: 1px solid rgba(255, 255, 255, 0.04);
@@ -308,6 +309,7 @@
 
 .venueName {
   font-size: 0.9rem;
+  width: 15rem;
 }
 
 .venueTime {
